adding page layout, header, footer, and images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="content">
+	  <%= render :partial => "shared/header" %>
+    <%= yield %>
+  </div>
+    
+    <%= render :partial => "shared/footer" %>
+    
 </body>
 </html>
