--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -1,29 +1,8 @@
-<%= form_for(@feature) do |f| %>
-  <% if @feature.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@feature.errors.count, "error") %> prohibited this feature from being saved:</h2>
+<label for="feature_name">Name:</label><br />
+<%= f.text_field 'name', :size => 60 %><br />
 
-      <ul>
-      <% @feature.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<label for="feature_description">Description:</label><br />
+<%= f.text_area 'description',  :size => "60x10" %><br />
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :priority_id %><br />
-    <%= f.text_field :priority_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<label for="feature_category">Priority:</label><br />
+<%= select :feature, :priority_id, @priorities.collect {|p| [ p.name, p.id ] } %><br /> <br />
