--- a/app/views/iterations/index.html.erb
+++ b/app/views/iterations/index.html.erb
@@ -1,29 +1,13 @@
-<h1>Listing iterations</h1>
+<%= link_to "Projects", projects_path %> > <%= link_to @project.name, features_path(@project) %> > <%= @feature.name %>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Days</th>
-    <th>Feature</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h2 id="iteration-header"><%= @feature.name %> feature has 
+	<%= pluralize @iterations.length, "Iteration" %> 
+	
+</h2>
 
-<% @iterations.each do |iteration| %>
-  <tr>
-    <td><%= iteration.name %></td>
-    <td><%= iteration.description %></td>
-    <td><%= iteration.days %></td>
-    <td><%= iteration.feature_id %></td>
-    <td><%= link_to 'Show', iteration %></td>
-    <td><%= link_to 'Edit', edit_iteration_path(iteration) %></td>
-    <td><%= link_to 'Destroy', iteration, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<ul id="iterations">
+<%= render :partial => 'iterations', :locals => {:iterations => @iterations} %>
+</ul>
 
-<br />
-
-<%= link_to 'New Iteration', new_iteration_path %>
+<br/>
+<%= render :partial => 'iterations/new' if logged_in?  %>
