--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,22 @@
-<h1>Listing projects</h1>
+Projects
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Priority</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h2><%= self.current_user ? self.current_user.login : "Guest" %>  has 
+	<%= pluralize(@projects.length,"project") %> 
+	
+</h2>
+<h3 id="high"><%= @high_projects.length %> High</h3>
+	<ul id="projects-high">
+		<%= render :partial => 'projects', :locals => {:projects => @high_projects} %>
+	</ul>
+<h3 id="med"><%= @med_projects.length %> Medium</h3>
+	<ul id="projects-med">
+		<%= render :partial => 'projects', :locals => {:projects => @med_projects} %>
+	</ul>
+<h3 id="low"><%= @low_projects.length %> Low</h3>
+	<ul id="projects-low">
+		<%= render :partial => 'projects', :locals => {:projects => @low_projects} %>
+	</ul>
 
-<% @projects.each do |project| %>
-  <tr>
-    <td><%= project.name %></td>
-    <td><%= project.description %></td>
-    <td><%= project.priority_id %></td>
-    <td><%= link_to 'Show', project %></td>
-    <td><%= link_to 'Edit', edit_project_path(project) %></td>
-    <td><%= link_to 'Destroy', project, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<br/>
+<%= render :partial => 'projects/new' if logged_in? %>
 
-<br />
-
-<%= link_to 'New Project', new_project_path %>
