--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,33 +1,14 @@
-<%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+<label for="task_name">Name:</label><br />
+<%= f.text_field 'name', :size => 60 %><br />
 
-      <ul>
-      <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<label for="task_description">Description:</label><br />
+<%= f.text_area 'description',  :size => "60x10" %><br />
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :priority_id %><br />
-    <%= f.text_field :priority_id %>
-  </div>
-  <div class="field">
-    <%= f.label :feature_id %><br />
-    <%= f.text_field :feature_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<label for="task_days">Days to complete:</label><br />
+<%= select :task, :days, (1..5).to_a  %><br /> <br />
+
+<label for="task_category">Priority:</label><br />
+<%= select :task, :priority_id, @priorities.collect {|p| [ p.name, p.id ] } %><br /> <br />
+
+<label for="task_user">Assigned to:</label><br />
+<%= select :task, :user_id, @users.collect {|u| [ u.login, u.id ] } %><br /> <br />
