--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,29 +1,25 @@
-<h1>Listing tasks</h1>
+<%= link_to "Projects", projects_path %> > 
+<%= link_to @project.name, features_path(@project) %> > 
+<%= link_to @feature.name, iterations_path(@project, @feature) %> >
+<%= @iteration.name %> 
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Priority</th>
-    <th>Feature</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h2><%= @iteration.name %> iteration has 
+	<%= pluralize @iteration.tasks.length, "Task" %> 
+	
+</h2>
 
-<% @tasks.each do |task| %>
-  <tr>
-    <td><%= task.name %></td>
-    <td><%= task.description %></td>
-    <td><%= task.priority_id %></td>
-    <td><%= task.feature_id %></td>
-    <td><%= link_to 'Show', task %></td>
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
-    <td><%= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<h3 id="high"><%= @high_tasks.length %> High</h3>
+	<ul id="tasks-high">
+	<%= render :partial => 'tasks', :locals => {:tasks => @high_tasks} %>
+	</ul>
+<h3 id="med"><%= @med_tasks.length %> Medium</h3>
+	<ul id="tasks-med">
+	<%= render :partial => 'tasks', :locals => {:tasks => @med_tasks} %>
+	</ul>
+<h3 id="low"><%= @low_tasks.length %> Low</h3>
+	<ul id="tasks-low">
+	<%= render :partial => 'tasks', :locals => {:tasks => @low_tasks} %>
+	</ul>
 
-<br />
-
-<%= link_to 'New Task', new_task_path %>
+<br/>
+<%= render :partial => 'tasks/new'  if logged_in? %>
