--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,5 +18,5 @@ Projects
 	</ul>
 
 <br/>
-<%= render :partial => 'projects/new' if logged_in? %>
+<%= render :partial => 'projects/new' %> <!-- if logged_in? -->
 
