--- a/app/views/features/_edit.html.erb
+++ b/app/views/features/_edit.html.erb
@@ -1,5 +1,6 @@
 <li id="<%= dom_id feature %>">
- 	<% form_remote_for :feature, feature, 
+ 	<% form_for :feature, feature, 
+ 	                  :remote => true,
                     :url => feature_path(@project, feature),   
                     :loading => 'App.disableProjectForm()',
                     :complete => 'App.enableProjectForm()',
