--- a/app/views/projects/_new.html.erb
+++ b/app/views/projects/_new.html.erb
@@ -4,7 +4,8 @@
 	
 	<div id="project-form-container" style="display:none"><!--new_project_path -->
     	<h3>Add a project</h3>
-    	<% form_remote_for :project, Feature.new, 
+    	<% form_for :project, Feature.new, 
+    	                 :remote => true,
                        :url => projects_path,   
                        :loading => 'App.disableForm()',
                        :complete => 'App.enableForm()',
