--- a/app/views/tasks/_edit.html.erb
+++ b/app/views/tasks/_edit.html.erb
@@ -1,5 +1,6 @@
 <li id="<%= dom_id task %>">
- 	<% form_remote_for :task, task, 
+ 	<% form_for :task, task, 
+ 	                  :remote => true,
                     :url => task_path(@project, @feature, @iteration, task),   
                     :loading => 'App.disableProjectForm()',
                     :complete => 'App.enableProjectForm()',
