wiring up basic rjs functionality, Note Rails 3.1 will drop rjs in favor of jquery (http://weblog.rubyonrails.org/2011/4/21/jquery-new-default)

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <li id="<%=dom_id project %>">
 <%= project.name %> - <%= pluralize(project.total_days, "day") %> to complete<br/>
-<%= link_to pluralize(project.features.length,"Feature"), features_path(project) %> 
+<%= link_to pluralize(project.features.length,"Feature"), project_features_path(project) %> 
 
 <% if logged_in?  %>
 -
