--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,6 +1,6 @@
 	<% projects.each do |project| %>
 	
-	<%= render :partial => 'project', :locals => { :project => project } %>
+	<%= render project %>
 
 	
 	<% end %>
