--- a/app/views/features/_feature.html.erb
+++ b/app/views/features/_feature.html.erb
@@ -1,21 +1,16 @@
 <li id="<%= dom_id feature %>">
 <b><%= feature.name %></b> requires <b><%= pluralize(feature.total_days, "day") %></b> to complete
 <br/>
-<%= link_to pluralize(feature.iterations.length, "Iteration"), iterations_path(@project, feature) %> 
+<%= link_to pluralize(feature.iterations.length, "Iteration"), project_feature_iterations_path(@project, feature) %> 
 
-<% if logged_in?  %>
+<!--% if logged_in?  %-->
 -
-<%= link_to_remote 'Edit', 
-                 :url => edit_feature_path(@project, feature), 
-                 :method => :get %> or
- <%= link_to_remote 'Destroy',
-                 :url => feature_path(@project, feature),
-                 :confirm => 'Are you sure?',
-	             :method => :delete %>
+<%= link_to 'Edit', edit_project_feature_path(@project, feature), :method => :get, :remote => true %> or
+<%= link_to 'Destroy',project_feature_path(@project, feature), :confirm => 'Are you sure?', :method => :delete, :remote => true %>
 	
 or Mark this feature completed <%= check_box_tag "feature[completed]", feature.completed %>
 
-<% end %>
+<!--% end %-->
 
 <br/>
 - <%= feature.description %><br/>
