--- a/app/views/features/_new.html.erb
+++ b/app/views/features/_new.html.erb
@@ -6,7 +6,7 @@
     	<h3>Add a feature</h3>
     	<% form_for :feature, Feature.new,
     	                 :remote => true,
-                       :url => features_path(@project),
+                       :url => project_features_path(@project),
                        :loading => 'App.disableForm()',
                        :complete => 'App.enableForm()',
                        :html => {:id => 'form' } do |f| %>
