--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
 <%= render :partial => "shared/logo" %>
 
 <div id="user_status_header">
-	Welcome <!--%= self.current_user ? self.current_user.login : "Guest" %--> Guest, 
+	Welcome <%= current_user ? current_user.email : "Guest" %> Guest, 
 	
-	<!--% if logged_in? %-->
-	  <!--%= link_to "log out" , sessions_path , :method => :delete %-->	
-	<!--% else %-->
-	  <!--%= link_to "login", new_session_path %-->
-	<!--% end %-->
+	<% if user_signed_in? %>
+	  <%= link_to "log out" , destroy_user_session_path , :method => :delete %>	
+	<% else %>
+	  <%= link_to "login", new_user_session_path %>
+	<% end %>
 	
 </div>
