--- a/app/views/projects/_new.html.erb
+++ b/app/views/projects/_new.html.erb
@@ -4,12 +4,13 @@
 	
 	<div id="project-form-container" style="display:none"><!--new_project_path -->
     	<h3>Add a project</h3>
-    	<% form_for :project, Project.new, 
-    	                 :remote => true,
-                       :url => projects_path,   
-                       :loading => 'App.disableForm()',
-                       :complete => 'App.enableForm()',
-                       :html => {:id => 'form'} do |f| %>
+    	<%= form_for Project.new, 
+    	            :as => :project,
+    	            :remote => true,
+                  :url => projects_path,   
+                  :loading => 'App.disableForm()',
+                  :complete => 'App.enableForm()',
+                  :html => {:id => 'form'} do |f| %>
 
    		<%= render :partial => 'projects/form', :locals => { :project => @project, :f => f }%>
 
