--- a/app/views/tasks/_new.html.erb
+++ b/app/views/tasks/_new.html.erb
@@ -4,12 +4,13 @@
 	
 	<div id="task-form-container" style="display:none">
     	<h3>Add a task</h3>
-    	<% form_for :task, Feature.new, 
-    	                 :remote => true,
-                       :url => project_feature_iteration_tasks_path(@project, @feature, @iteration),
-                       :loading => 'App.disableForm()',
-                       :complete => 'App.enableForm()',
-                       :html => {:id => 'form' } do |f| %>
+    	<%= form_for Feature.new, 
+    	            :as => :task, 
+    	            :remote => true,
+                  :url => project_feature_iteration_tasks_path(@project, @feature, @iteration),
+                  :loading => 'App.disableForm()',
+                  :complete => 'App.enableForm()',
+                  :html => {:id => 'form' } do |f| %>
 
    		<%= render :partial => 'tasks/form', :locals => { :f => f }%>
 
