--- a/app/views/features/_feature.html.erb
+++ b/app/views/features/_feature.html.erb
@@ -3,14 +3,14 @@
 <br/>
 <%= link_to pluralize(feature.iterations.length, "Iteration"), project_feature_iterations_path(@project, feature) %> 
 
-<!--% if logged_in?  %-->
+<% if user_signed_in? %>
 -
 <%= link_to 'Edit', edit_project_feature_path(@project, feature), :method => :get, :remote => true %> or
 <%= link_to 'Destroy',project_feature_path(@project, feature), :confirm => 'Are you sure?', :method => :delete, :remote => true %>
 	
 or Mark this feature completed <%= check_box_tag "feature[completed]", feature.completed %>
 
-<!--% end %-->
+<% end %>
 
 <br/>
 - <%= feature.description %><br/>
