--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -12,6 +12,30 @@
                  :confirm => 'Are you sure?',
 	               :method => :delete,
 	               :remote => true %>
+	               
+	
+ <%= form_for task, 
+ 	          :as => :task, 
+ 	          :remote => true,
+             :url => complete_project_feature_iteration_task_path(@project, @feature, @iteration, task),   
+             :html => {:id => 'task-form', :method => :put } do |f| %>
+
+             <%= f.hidden_field 'name' %>
+
+             <%= f.hidden_field 'description' %>
+             <%= f.hidden_field 'priority_id' %>
+             <%= f.hidden_field 'days' %>
+             <%= f.hidden_field 'user_id' %>
+             or Mark this feature completed
+             <%= f.check_box 'completed' %>
+
+
+ 	  <%= submit_tag 'Update' %> 
+
+
+ 	<% end %>
+	               
+	               	               
 <% end %>
 
 <br/>
