--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -26,7 +26,7 @@
              <%= f.hidden_field 'priority_id' %>
              <%= f.hidden_field 'days' %>
              <%= f.hidden_field 'user_id' %>
-             or Mark this feature completed
+             or Mark this task completed
              <%= f.check_box 'completed' %>
 
 
